--- a/algorithm/algorithm/algorithm.vcxproj.filters
+++ b/algorithm/algorithm/algorithm.vcxproj.filters
@@ -417,5 +417,11 @@
     <ClCompile Include="11722.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="1126.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="5546.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
